fixed margin issue on mobile

--- a/static/global.css
+++ b/static/global.css
@@ -39,11 +39,14 @@ button {
 	font-weight: 500;
 	font-size: 1.4rem;
 }
-article {
+.content {
 	background-color: var(--background-darker);
 	border-radius: 1em;
 	padding: 1em;
-	margin: 1em;
+	margin-top: 1em;
+}
+.author {
+	text-align: center;
 }
 
 /* reset user agent values*/
